zg 15.06.2016 22:27:05 +0200 - build 4708

1. с форума: ShiftEnd и ShiftHome в панелях тормозят.

drkns 14.06.2016 18:31:09 +0200 - build 4707

1. Системные ассоциации, у которых "associated program" - bat или cmd, запускались в отдельном окне.

drkns 13.06.2016 19:32:18 +0200 - build 4706

1. С форума: проблема с панелями Fullscreen view

zg 12.06.2016 21:04:46 +0200 - build 4705

1. после 4685 визуальные проблемы со скроллингом в редакторе мышкой.

drkns 12.06.2016 16:32:43 +0200 - build 4704

1. Ещё раз 0003254:
   - System.Executor.ComspecCondition по умолчанию пуст и используется встроенная логика (<>|& вне кавычек, как раньше).
   - используется внутренний RegExp, т. к. реализации std::regex в поддерживаемых компиляторах оставляют желать лучшего (особенно в gcc, где оно, видимо, просто для красоты).

drkns 12.06.2016 14:55:52 +0200 - build 4703

1. 0003254: Far 3.0 build 4700-4702 crashes on long file lists (!&)

drkns 11.06.2016 22:55:07 +0200 - build 4702

1. Ещё одно уточнение работы запускателя.

drkns 11.06.2016 20:05:25 +0200 - build 4701

1. Рефакторинг.

drkns 10.06.2016 23:49:57 +0200 - build 4700

1. Рефакторинг.

drkns 09.06.2016 01:50:33 +0200 - build 4699

1. Ещё раз #0003223: Добавлен параметр System.Executor.ComspecCondition, определяющий, когда команду следует запускать через comspec.

w17 08.06.2016 21:15:44 +0300 - build 4698

1. Уточнение 4697 - не пытаемся отключать Win10 full-screen, просто ничего не делаем по Alt-F9 для него.

w17 08.06.2016 17:25:01 +0300 - build 4697

1. Пытаемся нормально отрабатывать полноэкранный режим Win10.

zg 08.06.2016 15:46:48 +0200 - build 4696

1. уточнение 4676.

zg 02.06.2016 01:51:47 +0200 - build 4695

1. с форума: Если в диалоге начать записывать макрос (нажать Ctrl.), то индикатор записи макроса сразу не появляется,
   а только после нажатия дополнительной клавиши (и то не любой).

drkns 01.06.2016 22:51:16 +0200 - build 4694

1. С форума: Menu.Id в диалогах приводило к падению.
